# Tokenly

./: LICENSE  README.md  package-lock.json  package.json
docs/: Tokenly-Beta-Feedback-Form.docx  Tokenly-Beta-User-Guide.docx  ~$kenly-Beta-User-Guide.docx
src/: AddCredential.tsx  App.css  App.tsx  Dashboard.tsx  Settings.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  lib.rs  main.rs  vault.rs
